fix overflow sh*t again smh

--- a/css/styles.css
+++ b/css/styles.css
@@ -1088,6 +1088,8 @@ nav #nav-ul-wrapper li:nth-of-type(4) a::before {
 
 #about {
   position: relative;
+
+  overflow-x: hidden;
 }
 
 #about .section-header-container h3::before {
@@ -1767,10 +1769,6 @@ nav #nav-ul-wrapper li:nth-of-type(4) a::before {
 
   #about #avatar-container {
     padding: 0 28vw;
-  }
-
-  #projects {
-  overflow-x: initial;
   }
 
   #projects .project-stack {
